[package]
name = "triangulettered"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.15"
dotenvy = "0.15.7"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96" }
tokio = { version = "1.27.0", features = ["full"] }
tower-cookies = { version = "0.9.0", features = ["signed", "private"] }
